@@ -3,7 +3,7 @@
 use v6;
 use Test;
 
-plan 26;
+plan 43;
 
 use_ok( 'Set::Infinite' );
 use Set::Infinite;   # XXX should not need this
@@ -61,3 +61,38 @@ is( Set::Infinite.empty_set.complement.complement.stringify, '', 'complement of 
 
 is( $set1.difference( $set2 ).stringify, '[1,2)', 'difference' );
 
+{
+    # from synopsis and examples
+    my $set = Set::Infinite.new( objects => ( 1, 3, 9 ) );
+    is( $set.stringify, '1,3,9', 'from scalars' );
+}
+
+{
+    # iterator
+    my $span = Span.new( :int, :start(1), :end(2) );
+    my $set = Set::Infinite.new( objects => ( 2, 7, 9, $span ) );
+    is( $set.stringify, '[1,2],7,9', 'from scalars and span' );
+
+    # next / previous($x)
+    is( $set.next( 5 ), 7, 'next' );
+    is( $set.previous( 5 ), 2, 'previous' );
+    
+    my $iter = $set.iterator;
+    isa_ok( $iter, 'Set::Infinite::Iterator' );
+    my $i;
+    # say $i while $i = $iter.next;
+    is( $i = $iter.next, 1, 'iterator next 0' );
+    is( $i = $iter.current, 1, 'iterator current' );
+    $iter.reset;
+    is( $i = $iter.next, 1, 'iterator reset next 0' );
+    is( $i = $iter.next, 2, 'iterator next 1' );
+    is( $i = $iter.next, 7, 'iterator next 2' );
+    is( $i = $iter.next, 9, 'iterator next 3' );
+    is( $i = $iter.next, undef, 'iterator next 4' );
+    $iter.reset;
+    is( $i = $iter.previous, 9, 'iterator previous 1' );
+    is( $i = $iter.previous, 7, 'iterator previous 2' );
+    is( $i = $iter.previous, 2, 'iterator previous 3' );
+    is( $i = $iter.previous, 1, 'iterator previous 4' );
+    is( $i = $iter.previous, undef, 'iterator previous 5' );
+}
